--- a/style.css
+++ b/style.css
@@ -98,5 +98,5 @@ h2 {
     border-radius: 50%;
     top: 15px;
     left: 15px;
-    box-shadow: inset 1px 2px 5px var(--header-outline);
+    box-shadow: inset -1px 4px 10px 5px var(--header-outline);
 }
