--- a/style.css
+++ b/style.css
@@ -38,10 +38,14 @@ h2 {
 
 .btn {
     border: none;
+    background: none;
     vertical-align: middle;
     cursor: pointer;
 }
 
+.text-end {
+    text-align: end;
+}
 .main-container {
     width: var(--desktop-width);
     padding: 2em 0;
@@ -51,6 +55,14 @@ h2 {
     padding: 1.5em 2em;
     border: 3px solid var(--header-outline);
     border-radius: 15px;
+}
+
+.btn-white {
+    padding: 1em 2em;
+    border: 1px solid #fff;
+    border-radius: 15px;
+    color: white;
+    
 }
 
 .label-container h2 {
@@ -76,27 +88,140 @@ h2 {
     margin-bottom: 1em;
 }
 
+.gameplay {
+    margin: 3em 0;
+}
+
+.player-pick-container {
+    background: url('images/bg-triangle.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.result-container {
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.pick-container div {
+    margin-bottom: 0.7em;
+}
+
+.pick-container div > span {
+    font-size: 1.5em;
+    text-transform: uppercase;
+    margin-bottom: 1em;
+}
+
+.result-container h2 {
+    text-transform: uppercase;
+}
+
 .player-pick {
+    width: 70%;
+    margin: 0 auto;
     grid-template-columns: repeat(2, 50%);
+    grid-row-gap: 5em;
+    justify-items: center;
+}
+
+.player-pick > button:last-child {
+    grid-column: span 2;
 }
 
 .rps-button {
     position: relative;
-    background: linear-gradient(hsl(230, 89%, 62%), hsl(230, 89%, 65%));
     padding: 3em;
     border-radius: 50%;
-    width: 140px;
-    height: 140px;
+    width: 150px;
+    height: 150px;
+}
+
+.rps-button:hover > span{
+    box-shadow: inset -1px 4px 20px 9px var(--header-outline);
+    transition: all 0.3s;
 }
 
 .rps-button span {
     position: absolute;
     padding: 2em;
     background-color: #fff;
-    width: 78%;
-    height: 78%;
+    width: 80%;
+    height: 80%;
     border-radius: 50%;
     top: 15px;
     left: 15px;
     box-shadow: inset -1px 4px 10px 5px var(--header-outline);
+}
+
+.scissor-button {
+    background: linear-gradient(hsl(39, 89%, 49%), hsl(40, 84%, 53%));
+}
+
+.paper-button {
+    background: linear-gradient(hsl(230, 89%, 62%), hsl(230, 89%, 65%));
+}
+
+.rock-button {
+    background: linear-gradient(hsl(349, 71%, 52%), hsl(349, 70%, 56%));
+}
+
+.btn-rules {
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+}
+
+.rps-result .rps-button {
+    height: 165px;
+    width: 165px;
+}
+
+.rps-result .rps-button span {
+    height: 82%;
+    width: 82%;
+    top: 15px;
+    left: 15px;
+    box-shadow: inset 0px 6px 10px 3px var(--header-outline);
+} 
+
+.btn-play-again {
+    background-color: white;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 1em;
+    padding: 0.8em 0;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: var(--dark-text);
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content{
+    background-color: white;
+    width: 25%;
+    margin: 10% auto;
+    padding: 1em 0;
+    border-radius: 15px;
+    color: var(--dark-text);
+    text-align: center;
+}
+
+.modal-header {
+    text-transform: uppercase;
+}
+.modal-body {
+    padding: 2em 0;
 }
