--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ h2 {
     display: none;
 }
 
-.player-options.active {
-    display: block;
+.active {
+    display: block !important;
 }
 
 .player-pick {
@@ -153,7 +153,7 @@ h2 {
 
 .rps-button span {
     position: absolute;
-    padding: 2em;
+    padding: 2em 2.2em;
     background-color: #fff;
     width: 80%;
     height: 80%;
@@ -186,6 +186,7 @@ h2 {
 }
 
 .rps-result .rps-button span {
+    padding: 3em;
     height: 82%;
     width: 82%;
     top: 15px;
@@ -204,6 +205,14 @@ h2 {
     color: var(--dark-text);
 }
 
+.result-label {
+    display: none;
+}
+
+.show-result-animation {
+    animation: fadein, spin;
+    animation-duration: 4s, 4s;
+}
 
 .modal {
     display: none;
@@ -233,3 +242,64 @@ h2 {
 .modal-body {
     padding: 2em 0;
 }
+
+
+/*animations*/
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes spin {
+    from { transform: rotateX(0deg); }
+    to   { transform: rotateX(3600deg); }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes spin {
+    from { transform: rotateX(0deg); }
+    to   { transform: rotateX(3600deg); }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes spin {
+    from { transform: rotateX(0deg); }
+    to   { transform: rotateX(3600deg); }
+}
+
+/* Internet Explorer */
+@-ms-keyframes spin {
+    from { transform: rotateX(0deg); }
+    to   { transform: rotateX(3600deg); }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes spin {
+    from { transform: rotateX(0deg); }
+    to   { transform: rotateX(3600deg); }
+}
+
